specific the probe type according to task type (e.g. sequetial or discriminative)

--- a/configs/gens/MusicGenMedium.yaml
+++ b/configs/gens/MusicGenMedium.yaml
@@ -2,12 +2,10 @@ data:
   sample_rate: 32000 # this is the wanted sample rate required for genmodel
 
 model:
-  peft: 
-    name: ProbeModule
-
   gen_model: 
-    name: musicgen
-    extract_layer: -1
+    name: MusicGenMedium
+    version: medium
+    extract_layer: 17 # would be overwritten if assigned in base config
     
   
     
