--- a/configs/musgenGenre_precomp.yaml
+++ b/configs/musgenGenre_precomp.yaml
@@ -1,19 +1,23 @@
 # Project base config
 experiment:
   seed: 2024
-  task: GTZAN_genre
+  task: GTZAN_genre_feature
   gen_model: MusicGenSmall
   logger:
-    output_dir: 'outputs/'
+    output_dir: '../scratch/outputs/'
     type: wandb
     project: AskMuiscGen
     name: null
 
 training:
-  learning_rate: 0.0001
+  learning_rate: 0.001
   weight_decay: 0.01
-  epochs: 50 # max epoch
+  epochs: 750 # max epoch
   log_step: 5
   val_check_interval: 1
+
+model:
+  peft: 
+    use_feature: True
 
   
