--- a/configs/tasks/GTZAN_rhythm_feature.yaml
+++ b/configs/tasks/GTZAN_rhythm_feature.yaml
@@ -1,10 +1,11 @@
+# Project base config
 data:
   name: beat_tracking_on_feature
   data_dir: '/home/lego/Database/GTZAN/' # would be appended/join with child directory based on precompute model in PrecomputeModule when setting up
   batch_size: 64
   num_workers: 0
   aggregators: null #for this cache, all the time frame is aggregate into 1, no need additional aggregators
-  required_key: ['beat_t', 'beat_f'] # required target in key for meta
+  required_key: ['beat_f'] # required target in key for meta from info
 
 model:
   peft:
