--- a/configs/gens/MusicGenMedium.yaml
+++ b/configs/gens/MusicGenMedium.yaml
@@ -1,6 +1,6 @@
 data:
   sample_rate: 32000 # this is the wanted sample rate required for genmodel
-  preprocessors: [pad_or_truncate, resample]
+  preprocessors: [pad_or_truncate, monolize, resample]
 
 model:
   gen_model: 
