--- a/configs/musicgenMTG_genre.yaml
+++ b/configs/musicgenMTG_genre.yaml
@@ -1,7 +1,7 @@
 # Project base config
 experiment:
   seed: 2024
-  task: MTG_genre
+  task: MTG_genre_feature
   gen_model: MusicGenSmall
   logger:
     # output_dir: '../scratch/outputs/'
@@ -14,7 +14,7 @@ experiment:
 training:
   learning_rate: 0.001
   weight_decay: 0.01
-  epochs: 750 # max epoch
+  epochs: 1000 # max epoch
   log_step: 5
   val_check_interval: 1
 
