add some new config

--- a/configs/tasks/GS_key.yaml
+++ b/configs/tasks/GS_key.yaml
@@ -2,8 +2,8 @@
 data:
   name: key_GS
   # data_dir: '/home/lego/Database/Data'
-  data_dir: '../scratch/GS/raw'
-  batch_size: 8
+  data_dir: '../scratch/GS/key/raw'
+  batch_size: 16
   num_workers: 0
   max_length: 1323000  # 25s approx (30 * 44100)
   orig_sample_rate: 44100
