--- a/configs/VampC_GS_key_feature.yaml
+++ b/configs/VampC_GS_key_feature.yaml
@@ -1,7 +1,7 @@
 # Project base config
 experiment:
   seed: 2024
-  task: GS_key
+  task: GS_key_feature
   gen_model: VampC
   logger:
     # output_dir: '../scratch/outputs/'
@@ -14,7 +14,7 @@ experiment:
 training:
   learning_rate: 0.001
   weight_decay: 0.01
-  epochs: 1500 # max epoch
+  epochs: 50 # max epoch
   log_step: 5
   val_check_interval: 1
 
