assigning every configuration to the right project for logger

--- a/configs/VampC_GS_key.yaml
+++ b/configs/VampC_GS_key.yaml
@@ -8,7 +8,7 @@ experiment:
     output_dir: 'cache/outputs/'
 
     type: wandb
-    project: AskMuiscGen
+    project: Giantsteps_key
     name: null
 
 training:
