--- a/configs/VampC_GS_tempo_feature.yaml
+++ b/configs/VampC_GS_tempo_feature.yaml
@@ -8,7 +8,7 @@ experiment:
     output_dir: 'cache/outputs/'
 
     type: wandb
-    project: AskMuiscGen
+    project: Giantsteps_tempo
     name: null
 
 training:
