--- a/configs/musicgen_GS_key_feature.yaml
+++ b/configs/musicgen_GS_key_feature.yaml
@@ -8,7 +8,7 @@ experiment:
     output_dir: 'cache/outputs/'
 
     type: wandb
-    project: AskMuiscGen
+    project: Giantsteps_key
     name: null
 
 training:
