--- a/configs/musicgen_MTG_genre_feature.yaml
+++ b/configs/musicgen_MTG_genre_feature.yaml
@@ -8,7 +8,7 @@ experiment:
     output_dir: 'outputs/'
 
     type: wandb
-    project: AskMuiscGen
+    project: MTG_genre
     name: null
 
 training:
