--- a/configs/MusicGenM_GS_key_feature.yaml
+++ b/configs/MusicGenM_GS_key_feature.yaml
@@ -2,7 +2,7 @@
 experiment:
   seed: 2024
   task: GS_key_feature
-  gen_model: MusicGenSmall
+  gen_model: MusicGenMedium
   logger:
     output_dir: '../scratch/outputs/'
     # output_dir: 'cache/outputs/'
@@ -11,7 +11,7 @@ experiment:
     name: null
 
 training:
-  learning_rate: 0.001
+  learning_rate: 0.00001
   weight_decay: 0.01
   epochs: 1500 # max epoch
   log_step: 5
