--- a/configs/tasks/GS_tempo.yaml
+++ b/configs/tasks/GS_tempo.yaml
@@ -1,8 +1,8 @@
 # task config
 data:
   name: tempo_GS
-  data_dir: '../Database/GS/tempo/raw'
-  # data_dir: '../scratch/GS/tempo/raw'
+  # data_dir: '../Database/GS/tempo/raw'
+  data_dir: '../scratch/GS/tempo/raw'
   batch_size: 4
   num_workers: 0
   max_length: 1102500  # 30s approx (30 * 44100)
@@ -14,7 +14,7 @@ model:
     name: DiscrimProbeModule
     metric: null
     repr_head:
-      n_classes: 300
+      n_classes: 60
       hidden_sizes: 512
       dropout: 0.25
 
