--- a/configs/MusicGenL_MTG_genre_feature.yaml
+++ b/configs/MusicGenL_MTG_genre_feature.yaml
@@ -2,7 +2,7 @@
 experiment:
   seed: 2024
   task: MTG_genre_feature
-  gen_model: MusicGenMedium
+  gen_model: MusicGenLarge
   logger:
     # output_dir: '../scratch/outputs/'
     output_dir: 'outputs/'
@@ -14,7 +14,7 @@ experiment:
 training:
   learning_rate: 0.001
   weight_decay: 0.01
-  epochs: 100 # max epoch
+  epochs: 50 # max epoch
   log_step: 5
   val_check_interval: 1
 
