--- a/configs/MusicGenL_GS_tempo_feature.yaml
+++ b/configs/MusicGenL_GS_tempo_feature.yaml
@@ -1,14 +1,14 @@
 # Project base config
 experiment:
   seed: 2024
-  task: MTG_genre_feature
-  gen_model: MusicGenSmall
+  task: GS_tempo_feature
+  gen_model: MusicGenLarge
   logger:
     # output_dir: '../scratch/outputs/'
-    output_dir: 'outputs/'
+    output_dir: 'cache/outputs/'
 
     type: wandb
-    project: MTG_genre
+    project: Giantsteps_tempo
     name: null
 
 training:
@@ -20,7 +20,7 @@ training:
 
 model:
   gen_model:
-      extract_layer: 15
+      extract_layer: 0
   
 
   
