--- a/configs/tasks/GS_tempo.yaml
+++ b/configs/tasks/GS_tempo.yaml
@@ -1,9 +1,9 @@
 # task config
 data:
   name: tempo_GS
-  # data_dir: '../Database/GS/tempo/raw'
-  data_dir: '../scratch/GS/tempo/raw'
-  batch_size: 4
+  data_dir: '../../Database/GS/tempo/raw'
+  # data_dir: '../scratch/GS/tempo/raw'
+  batch_size: 1
   num_workers: 0
   max_length: 1102500  # 30s approx (30 * 44100)
   orig_sample_rate: 44100
