clean configuration files -> put logger into the task

--- a/configs/tasks/GS_key_feature.yaml
+++ b/configs/tasks/GS_key_feature.yaml
@@ -1,4 +1,12 @@
 # task config
+experiment:
+  logger:
+    # output_dir: '../scratch/outputs/'
+    output_dir: 'cache/outputs/'
+    type: wandb
+    project: Giantsteps_key
+    name: null
+    
 data:
   name: key_GS_feature
   data_dir: '/home/lego/Database/GS/key/'
