--- a/configs/MusicGenM_GS_key_feature.yaml
+++ b/configs/MusicGenM_GS_key_feature.yaml
@@ -4,8 +4,8 @@ experiment:
   task: GS_key_feature
   gen_model: MusicGenMedium
   logger:
-    output_dir: '../scratch/outputs/'
-    # output_dir: 'cache/outputs/'
+    # output_dir: '../scratch/outputs/'
+    output_dir: 'cache/outputs/'
     type: wandb
     project: Giantsteps_key
     name: null
