--- a/configs/tasks/GS_key.yaml
+++ b/configs/tasks/GS_key.yaml
@@ -1,9 +1,9 @@
 # task config
 data:
   name: key_GS
-  # data_dir: '/home/lego/Database/Data'
-  data_dir: '../scratch/GS/key/raw'
-  batch_size: 6
+  data_dir: '/home/lego/Database/GS/key/raw'
+  # data_dir: '../scratch/GS/key/raw'
+  batch_size: 1
   num_workers: 0
   max_length: 1323000  # 25s approx (30 * 44100)
   orig_sample_rate: 44100
@@ -17,6 +17,9 @@ model:
       n_classes: 24
       hidden_sizes: 512
       dropout: 0.25
+    gen_model:
+      name: MusicGenSmall
+      extract_layer: 0
 
 training:
   accumulate_grad_batches: 8
