--- a/configs/MusicGenM_GS_key_k-means=4.yaml
+++ b/configs/MusicGenM_GS_key_k-means=4.yaml
@@ -2,8 +2,8 @@
 experiment:
   seed: 2024
   task: GS_key_feature
-  gen_model: MusicGenLarge
-  
+  gen_model: MusicGenMedium
+
 
 training:
   learning_rate: 0.001
@@ -15,6 +15,7 @@ training:
 model:
   gen_model:
       extract_layer: 0
+      output_dim: 4096
   
 
   
